2006-01-30  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added copyright header following formal argeement of
	  the author Pedro Felzenszwalb <pff@cs.uchicago.edu>

	* tools/shapegame/.cvsignore:
	* tools/shapegame/dt/.cvsignore:
	* tools/shapegame/dt/README:
	* tools/shapegame/dt/dt.cpp:
	* tools/shapegame/dt/dt.h:
	* tools/shapegame/dt/image.h:
	* tools/shapegame/dt/imconv.h:
	* tools/shapegame/dt/imutil.h:
	* tools/shapegame/dt/misc.h:
	* tools/shapegame/dt/pnmfile.h:
	* tools/shapegame/nice_target_spot.cpp:

2006-01-30  Yves Combe  <yves@ycombe.net>

	fix configuration window was not visible in fullscreen mode, using gtk_dialog.

	* src/gcompris/board_config.c: (gcompris_close_board_conf),
	(gcompris_response_board_conf), (gcompris_configuration_window):

2006-01-30  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added the German map by Olaf Ronneberger.
	- Added in tools/shapegame/ a utility to create shapegame activity

	* boards/geography.xml.in:
	* boards/geography/Makefile.am:
	* boards/geography/board6_0.xml.in:
	* boards/geography/germany_region/back.png:
	* boards/geography/germany_region/baden-wuerttemberg.png:
	* boards/geography/germany_region/bayern.png:
	* boards/geography/germany_region/berlin.png:
	* boards/geography/germany_region/brandenburg.png:
	* boards/geography/germany_region/bremen.png:
	* boards/geography/germany_region/hamburg.png:
	* boards/geography/germany_region/hessen.png:
	* boards/geography/germany_region/mecklenburg-vorpommern.png:
	* boards/geography/germany_region/niedersachsen.png:
	* boards/geography/germany_region/nordrhein-westfalen.png:
	* boards/geography/germany_region/rheinland-pfalz.png:
	* boards/geography/germany_region/saarland.png:
	* boards/geography/germany_region/sachsen-anhalt.png:
	* boards/geography/germany_region/sachsen.png:
	* boards/geography/germany_region/schleswig_holstein.png:
	* boards/geography/germany_region/target_baden-wuerttemberg.png:
	* boards/geography/germany_region/target_bayern.png: